--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section class="hero is-dark is-fullheight">
     <div class="hero-body">
         <div class="section">
-            <h1 class="title has-text-weight-normal">
+            <h1 class="title has-text-weight-bold">
                 Comp426
             </h1>
             <h2 class="subtitle has-text-weight-normal">
