--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="title has-text-weight-bold">
                 Comp426
             </h1>
-            <h2 class="subtitle has-text-weight-normal">
+            <h2 class="subtitle has-text-weight-bold">
                 A web development class
             </h2>
         </div>
