--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <div class="content">
             <div class="columns">
                 <div class="column">
-                    <h1 class="title has-text-weight-normal">Hierarchy</h1>
-                    <h5 class="subtitle has-text-grey has-text-weight-normal">Order of importance of each element</h5>
+                    <h1 class="title">Hierarchy</h1>
+                    <h5 class="subtitle has-text-grey">Order of importance of each element</h5>
                     <p>
 		    	When it comes to design and specifically typography (which is a massive part of web design), you want your content to be readable.
 			This means that when someone looks at it, they intuitively know which text to read first, second, and third.
@@ -134,8 +134,8 @@
 		    </p>
                 </div>
                 <div class="column">
-                    <h1 class="title has-text-weight-normal">Measure</h1>
-                    <h5 class="subtitle has-text-grey has-text-weight-normal">The width of a line of text</h5>
+                    <h1 class="title">Measure</h1>
+                    <h5 class="subtitle has-text-grey">The width of a line of text</h5>
                     <p>
 		    	The term 'measure' describes the width of a text block.
 		    	If you're seeking to achieve the optimum reading experience it's clearly an important consideration.
