--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 </section>
 <section class="section has-background-white">
     <div class="container">
-        <div class="content has-text-weight-bold">
-            <h1 class="title">Consistency is Key</h1>
+        <div class="content">
+            <h1 class="title has-text-weight-bold">Consistency is Key</h1>
             <h5 class="subtitle has-text-grey">Elements on a web page should be related and follow the same theme</h5>
             <p>
 	    	For the sake of readability and user experience you should try to keep you styling similar throughout the page.
