--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Assignment 2</title>
 </head>
 <body>
-<section class="hero is-dark is-fullheight">
+<section class="hero is-dark is-fullheight has-text-weight-bold">
     <div class="hero-body">
-        <div class="section has-text-weight-bold">
+        <div class="section">
             <h1 class="title">
                 Comp426
             </h1>
